# libcli

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  algorithms.hpp  cli.hpp  main.cpp  option.hpp  parse.hpp
examples/: basic.cpp
include/: libcli.hpp
include/libcli/: algorithms.hpp  cli.hpp  option.hpp  parse.hpp  parser_utils.hpp
test/: main.cpp  test.cpp
